--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "@simon_he/eslint-config": "^0.0.6",
     "@types/node": "^18.18.9",
     "@types/vscode": "^1.84.1",
-    "@vscode-use/utils": "^0.0.59",
+    "@vscode-use/utils": "^0.0.63",
     "@vue/compiler-sfc": "^3.3.8",
     "bumpp": "^9.2.0",
     "eslint": "^8.53.0",
     "esno": "^0.16.3",
+    "get-sponsors-list": "^0.0.3",
     "lazy-js-utils": "^0.0.75",
     "pnpm": "^8.10.5",
     "rimraf": "^4.4.1",
