--- a/package.json
+++ b/package.json
@@ -33,6 +33,25 @@
   "activationEvents": [
     "onStartupFinished"
   ],
+  "contributes": {
+    "configuration": {
+      "type": "object",
+      "title": "v-component-prompter",
+      "properties": {
+        "v-component-prompter.code": {
+          "type": "string",
+          "default": "",
+          "description": "activation code"
+        }
+      }
+    },
+    "commands": [
+      {
+        "command": "v-component-prompter.activation",
+        "title": "activation v-component-prompter"
+      }
+    ]
+  },
   "scripts": {
     "dev": "pnpm build --watch",
     "test": "vitest",
@@ -51,13 +70,14 @@
     "@types/vscode": "^1.84.1",
     "@vscode-use/utils": "^0.0.72",
     "@vue/compiler-sfc": "^3.3.8",
+    "axios": "^1.6.2",
     "bumpp": "^9.2.0",
     "eslint": "^8.53.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
-    "get-sponsors-list": "^0.0.4",
     "lazy-js-utils": "^0.0.77",
+    "node-machine-id": "^1.1.12",
     "pnpm": "^8.10.5",
     "rimraf": "^4.4.1",
     "tsup": "^6.7.0",
