--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
     "lazy-js-utils": "^0.0.84",
+    "lazy-parser": "^0.0.8",
     "node-machine-id": "^1.1.12",
     "pnpm": "^8.10.5",
     "rimraf": "^4.4.1",
