--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "lint:fix": "eslint . --fix",
     "publish": "vsce publish --no-dependencies",
     "typecheck": "tsc --noEmit",
-    "release": "bumpp && pnpm run publish"
+    "release": "pnpm build && bumpp && pnpm run publish"
   },
   "devDependencies": {
     "@babel/parser": "^7.23.3",
