--- a/package.json
+++ b/package.json
@@ -69,16 +69,17 @@
     "release": "pnpm build && bumpp && pnpm run publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.0",
+    "@antfu/eslint-config": "^3.7.3",
+    "@simon_he/fetch-npm-cjs": "^0.0.3",
     "@types/node": "^18.19.40",
     "@types/vscode": "^1.84.1",
-    "@vscode-use/utils": "0.1.10-beta.1",
+    "@vscode-use/utils": "0.1.30",
     "bumpp": "^9.4.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.12.0",
     "esno": "^0.16.3",
     "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
-    "lazy-js-utils": "^0.0.84",
+    "lazy-js-utils": "^0.1.1",
     "lazy-parser": "^0.0.8",
     "pnpm": "^8.15.9",
     "tsup": "^6.7.0",
