--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "publisher": "simonhe",
   "name": "v-component-prompter",
-  "displayName": "v component prompter",
+  "displayName": "Vue Component Prompter",
   "version": "0.0.45",
   "packageManager": "pnpm@8.15.9",
-  "description": "v-component-prompter",
+  "description": "A powerful tool for prompting Vue components with ease.",
   "author": "Simon He <https://github.com/Simon-He95>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/Simon-He95",
@@ -22,18 +22,19 @@
   "keywords": [
     "vue",
     "vue-jsx",
-    "vue-prompter"
+    "vue-prompter",
+    "vue-components",
+    "vue-cli",
+    "vue-tools",
+    "vue-utilities"
   ],
   "categories": [
     "Other"
   ],
   "main": "./dist/index.js",
   "icon": "icon.png",
-  "files": [
-    "dist"
-  ],
   "engines": {
-    "vscode": "^1.95.0"
+    "vscode": "^1.75.1"
   },
   "activationEvents": [
     "onStartupFinished"
@@ -72,19 +73,17 @@
     "@antfu/eslint-config": "^3.9.1",
     "@simon_he/fetch-npm-cjs": "^0.0.22",
     "@types/node": "^18.19.64",
-    "@types/vscode": "^1.95.0",
-    "@vscode-use/utils": "0.1.30",
+    "@types/vscode": "^1.75.1",
+    "@vscode-use/utils": "0.1.40",
+    "@vscode/vsce": "^3.2.1",
     "bumpp": "^9.8.1",
     "eslint": "^9.14.0",
-    "esno": "^0.16.3",
     "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
-    "lazy-js-utils": "^0.1.19",
+    "lazy-js-utils": "^0.1.28",
     "lazy-parser": "^0.0.8",
-    "pnpm": "^8.15.9",
     "tsup": "^6.7.0",
     "typescript": "^5.6.3",
-    "vitest": "^0.29.8",
-    "vsce": "^2.15.0"
+    "vitest": "^0.29.8"
   }
 }
