--- a/package.json
+++ b/package.json
@@ -70,20 +70,21 @@
     "release": "pnpm build && bumpp && pnpm run publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.9.1",
+    "@antfu/eslint-config": "^3.16.0",
     "@simon_he/fetch-npm-cjs": "^0.0.22",
-    "@types/node": "^18.19.64",
-    "@types/vscode": "^1.75.1",
+    "@types/node": "^18.19.104",
+    "@types/vscode": "1.75.1",
     "@vscode-use/utils": "0.1.40",
-    "@vscode/vsce": "^3.2.1",
-    "bumpp": "^9.8.1",
-    "eslint": "^9.14.0",
-    "fast-glob": "^3.3.2",
+    "@vscode/vsce": "^3.4.2",
+    "@vue/compiler-sfc": "3.3.4",
+    "bumpp": "^9.11.1",
+    "eslint": "^9.27.0",
+    "fast-glob": "^3.3.3",
     "find-up": "^7.0.0",
-    "lazy-js-utils": "^0.1.28",
-    "lazy-parser": "^0.0.8",
+    "lazy-js-utils": "^0.1.44",
+    "lazy-parser": "^0.0.31",
     "tsup": "^6.7.0",
-    "typescript": "^5.6.3",
+    "typescript": "^5.8.3",
     "vitest": "^0.29.8"
   }
 }
